add styles for pages, add pagination-buttons and implement first way of pagination

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -46,3 +46,23 @@ h1 {
   transform: translateX(-350px);
   transition: all 500ms ease-in;
 }
+
+.page__wrapper {
+  margin-top: 25px;
+  display: flex;
+  justify-content: center;
+}
+
+.page {
+  padding: 10px;
+  border: 1px solid teal;
+  cursor: pointer;
+  color: teal;
+  margin: 5px;
+}
+
+.page__current {
+  background-color: teal;
+  color: white;
+  font-weight: bold;
+}
