--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,7 +6,8 @@
 
 #root {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App {
@@ -47,22 +48,20 @@ h1 {
   transition: all 500ms ease-in;
 }
 
-.page__wrapper {
-  margin-top: 25px;
+.navbar {
+  height: 50px;
+  width: 100vw;
   display: flex;
-  justify-content: center;
+  align-items: center;
+  padding: 0 15px;
+  background: teal;
 }
 
-.page {
-  padding: 10px;
-  border: 1px solid teal;
-  cursor: pointer;
-  color: teal;
-  margin: 5px;
+.navbar__links {
+  margin-left: auto;
 }
 
-.page__current {
-  background-color: teal;
+.links {
   color: white;
-  font-weight: bold;
+  margin: 10px;
 }
